Fix: Fix z-index on new post modal to overlay all background objects

--- a/assets/stylesheets/NavBar/PostModal.scss
+++ b/assets/stylesheets/NavBar/PostModal.scss
@@ -1,5 +1,6 @@
 #post-modal {
   top: 0;
+  z-index: 1;
   position: absolute;
   width: 100vw;
   height: 100vh;
